<resources>
    <string name="app_name">Contact App</string>
    <string name="contactNamePlaceholder">Name</string>
    <string name="contactNameHint">Full Name</string>
    <string name="contactPhonePlaceholder">Phone</string>
    <string name="contactMobileHint">Mobile Phone</string>
    <string name="contactHomePhoneHint">Home Phone</string>
    <string name="contactAddressHint">Address</string>
    <string name="contactMailHint">Mail</string>
    <string name="contactFirstLetter">A</string>
    <string name="contactListMenuHeader">Select an action for the contact</string>
    <string name="scheduleListMenuHeader">Select an action for the appointment</string>
    <string name="deletedFeedback">has been deleted</string>
    <string name="insertContactFeedback">has been added to your contacts</string>
    <string name="editContactFeedback">"The contact has been edited"</string>
    <string name="exportContactsFeedback">"The contacts have been exported to external SD"</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="imgDesc">Image Description</string>
    <string name="emptyFieldError">The field cannot be empty</string>
    <string name="invalidMailError">Introduce a valid mail</string>
    <string name="invalidPhoneError">Introduce a valid phone</string>
    <string name="completeFields">Please complete all fields correctly to continue</string>
    <string name="callMobile">Call mobile</string>
    <string name="callHomePhone">Call house</string>
    <string name="searchPlaceholder">Search a contact</string>
    <string name="openSchedule">Open schedule</string>
    <string name="exportToFile">Export to file</string>
    <string name="appointmentTitle">Appointment title here</string>
    <string name="appointmentDate">01/01/2021</string>
    <string name="appointmentTitleHint">Appointment title</string>
    <string name="insertAppointmentFeedback">has been added to your schedule</string>
    <string name="editAppointmentFeedback">"The appointment has been edited"</string>
    <string name="infoMessage">"Select an option to export contacts, add a contact or manage your schedule"</string>
</resources>