<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactCreateEditFragment" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/inputsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:alpha="0.5"
                    android:contentDescription="@string/imgDesc"
                    android:src="@drawable/ic_person_black_24dp"
                    app:tint="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactNameHint" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:alpha="0.5"
                    android:contentDescription="@string/imgDesc"
                    android:src="@drawable/ic_home_black_24dp"
                    app:tint="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactAddressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactAddressHint" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:alpha="0.5"
                    android:contentDescription="@string/imgDesc"
                    android:src="@drawable/ic_smartphone_black_24dp"
                    app:tint="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactMobileField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactMobileHint" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:alpha="0.5"
                    android:contentDescription="@string/imgDesc"
                    android:src="@drawable/ic_phone_black_24dp"
                    app:tint="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactHomePhoneField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/homePhoneField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactHomePhoneHint" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="14dp"
                    android:alpha="0.5"
                    android:contentDescription="@string/imgDesc"
                    android:src="@drawable/ic_email_black_24dp"
                    app:tint="@color/colorWhite" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/contactMailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mailField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactMailHint" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneCallButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/callMobileBtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/callMobile" />

            <Button
                android:id="@+id/callHomePhoneBtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/callHomePhone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAtionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/cancelContactBtn"
                android:layout_margin="5dp"
                android:background="@color/darkColorHl"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/saveContactBtn"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/save"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>